--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "druida"
-version = "0.0.9"
+version = "0.0.10"
 authors = [
   { name="Jorge Cardenas", email="jorge.cardenas.l@mail.pucv.cl" },
 ]
@@ -25,7 +25,11 @@ dependencies = [
   "torch~=2.0.1",
   "scikit-learn",
   "torchvision",
-  "torchsummary"
+  "torchsummary",
+  "matplotlib",
+  "logging",
+  "tqdm",
+  "pillow"
   ]
 
 
