--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "druida"
-version = "0.0.19"
+version = "0.0.20"
 authors = [
   { name="Jorge Cardenas", email="jorge.cardenas.l@mail.pucv.cl" },
 ]
@@ -31,7 +31,8 @@ dependencies = [
   "pillow",
   "transformers",
   "ezdxf",
-  "imutils"
+  "imutils",
+  "opencv-python"
   ]
 
 
