--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
 [project]
 name = "druida"
-version = "0.0.22"
+version = "0.0.28"
 authors = [
   { name="Jorge Cardenas", email="jorge.cardenas.l@mail.pucv.cl" },
 ]
@@ -16,15 +15,16 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+
 dependencies = [
   "wheel",
   "pillow",
   "numpy<=1.24.3",
   "pandas~=2.1.0", 
-  "tensorflow==2.13.*",
-  "torch~=2.0.1",
+  "tensorflow",
+  "torch==2.0.1",
   "scikit-learn",
-  "torchvision",
+  "torchvision==0.17.2",
   "torchsummary",
   "matplotlib",
   "tqdm",
@@ -36,10 +36,8 @@ dependencies = [
   ]
 
 
-
 [tool.hatch.metadata]
 allow-direct-references = true
-
 
 [project.urls]
 "Homepage" = "https://github.com/Jorgecardenas1/druida_proof_of_concept"
